tenzir/integration/data/reference/from_to/test_from_failure/step_02.ref
error: no known format for extension `.extension`
 --> <input>:1:14
  |
1 | from "failure.extension.bz2"
  |              ^^^^^^^^^^ 
  |
  = note: supported extensions for format deduction: `arrow`, `cef`, `csv`, `feather`, `json`, `jsonl`, `leef`, `ndjson`, `pcap`, `ssv`, `tsv`, `yaml`
  = hint: you can pass a pipeline to handle compression and format
  = docs: https://docs.tenzir.com/tql2/operators/from